--- a/SistemaSolicitudesLaDat/Pages/Shared/_PrincipalLayout.cshtml
+++ b/SistemaSolicitudesLaDat/Pages/Shared/_PrincipalLayout.cshtml
@@ -13,6 +13,8 @@
     <title>@ViewData["Title"] Sistema de Solicitudes LaDat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
     <style>
         body {
             overflow-x: hidden;
@@ -43,6 +45,7 @@
                 </div>
                 <div class="w-80 mx-auto" style="height: 3px; background-color: #e6e6e6; margin-bottom: 5px"></div>
                 <ul class="nav flex-column">
+                    <li class="nav-item"><a class="nav-link text-white" href="/Usuarios/AgregarUsuario">Nuevo Usuario</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="/Principal">Principal</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="/About">Acerca de</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="/Contact">Contacto</a></li>
