--- a/SistemaSolicitudesLaDat/Pages/Shared/_PrincipalLayout.cshtml
+++ b/SistemaSolicitudesLaDat/Pages/Shared/_PrincipalLayout.cshtml
@@ -45,10 +45,8 @@
                 </div>
                 <div class="w-80 mx-auto" style="height: 3px; background-color: #e6e6e6; margin-bottom: 5px"></div>
                 <ul class="nav flex-column">
-                    <li class="nav-item"><a class="nav-link text-white" href="/Usuarios/AgregarUsuario">Nuevo Usuario</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/Usuarios/ListarUsuarios">Gestión Usuarios</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="/Principal">Principal</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="/About">Acerca de</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="/Contact">Contacto</a></li>
                     <li class="nav-item">
                         <form method="post" asp-page="/CerrarSesion" class="d-inline">
                             <button type="submit" class="btn btn-outline-light mt-2 w-100 text-start">Cerrar sesión</button>
@@ -71,5 +69,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    @RenderSection("Scripts", required: false)
+
 </body>
 </html>
