--- a/SistemaSolicitudesLaDat/Pages/Shared/_PrincipalLayout.cshtml
+++ b/SistemaSolicitudesLaDat/Pages/Shared/_PrincipalLayout.cshtml
@@ -45,10 +45,10 @@
                 <div class="w-80 mx-auto" style="height: 3px; background-color: #e6e6e6; margin-bottom: 5px"></div>
                 <ul class="nav flex-column">
                     <li class="nav-item"><a class="nav-link text-white" href="/Usuarios/ListarUsuarios">Gestión Usuarios</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="/">Link 1</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="/">Link 2</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="/">Link 3</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="/">Link 4</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/Representantes/ListarRepresentantes">Gestión Representantes</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/Solicitudes/Listar">Solicitudes</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/Tareas/TareasPorUsuario">TareasPorUsuario</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/Tareas/TareasPorSolicitud">TareasPorSolicitud</a></li>
                     <li class="nav-item">
                         <form method="post" asp-page="/CerrarSesion" class="d-inline">
                             <button type="submit" class="btn btn-outline-light mt-2 w-100 text-start">Cerrar sesión</button>
