--- a/SistemaSolicitudesLaDat/Pages/Shared/_PrincipalLayout.cshtml
+++ b/SistemaSolicitudesLaDat/Pages/Shared/_PrincipalLayout.cshtml
@@ -14,6 +14,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+
+    <!-- Colores de listar solicitudes -->
+    <link rel="stylesheet" href="~/css/SolicitudesColores.css" />
 
     <style>
         body {
@@ -45,8 +49,8 @@
                 <div class="w-80 mx-auto" style="height: 3px; background-color: #e6e6e6; margin-bottom: 5px"></div>
                 <ul class="nav flex-column">
                     <li class="nav-item"><a class="nav-link text-white" href="/Usuarios/ListarUsuarios">Gestión Usuarios</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="/">Link 1</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="/">Link 2</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/Solicitudes/ListarSolicitudes">Gestión Solicitudes</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/Representantes/ListarRepresentantes">Gestión Representantes</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="/">Link 3</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="/">Link 4</a></li>
                     <li class="nav-item">
